# dotfiles

./: clear-caches.sh  dotfiles_refresh.fish  install-script-python.py  install-script.sh  install_newest_discord_canary.sh  rofiwp.sh  setwp.fish  setwp.sh
.config/quickshell/: .clangd  .gitignore  .qmlls.ini  CMakeLists.txt  README.md  compile_shaders.sh  config.json  shell.json  shell.qml  theme.json
.config/quickshell/Components/: CircularProgressBar.qml  CustomShortcut.qml  ExclusiveZone.qml  LucideIcon.qml  MaterialIcon.qml  NotificationWrapper.qml  Pill.qml  RoundedImage.qml  SearchBar.qml  Squircle.qml  StyledRect.qml  StyledText.qml  StyledTooltip.qml  SvgIcon.qml
.config/quickshell/Config/: AppLauncherConfig.qml  BarConfig.qml  Config.qml  FontsConfig.qml  GeneralConfig.qml  Icons.qml  LauncherConfig.qml  NotificationConfig.qml  WLogoutConfig.qml  WallpaperPickerConfig.qml
.config/quickshell/Managers/: PopupManager.qml  WindowManager.qml
.config/quickshell/Modules/: AppLauncher.qml  BackgroundText.qml  Bar.qml  Launcher.qml  NotificationPopups.qml  NotificationsPopup.qml  WLogout.qml  WallpaperPicker.qml  Watermark.qml
.config/quickshell/Plugins/: .qmlls.ini  CMakeLists.txt  FontsLoader.cpp  FontsLoader.hpp  ImageAnalyzer.cpp  ImageAnalyzer.hpp  TestPlug.cpp  TestPlug.hpp
.config/quickshell/Programs/: .crates.toml  .crates2.json  Cargo.toml  set_wallpaper.sh  stats  stats.sh
.config/quickshell/Scripts/: getOutOfDatePkgs.sh
.config/quickshell/Services/: ApplicationsService.qml  AudioService.qml  BacklightService.qml  BatteryService.qml  SysInfo.qml  (+11 more)
(+311 files in other folders)
